--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -2237,7 +2237,7 @@
 <tr style="background-color:#ffffff;">
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">42</td>
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">DM519</td>
-  <td style="border: 1px solid #ddd; padding: 10px;">CBLRS: a Copula-Bayesian Log-Ratio Score Framework for Lightweight Outlier Detection</td>
+  <td style="border: 1px solid #ddd; padding: 10px;">Spline-Interpolated Density and Dependency-Aware Outlier Scoring for Lightweight Deployment</td>
   <td style="border: 1px solid #ddd; padding: 10px;">Da Li (Stealth Startup)</td>
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">No</td>
 </tr>
