--- a/index.html
+++ b/index.html
@@ -1943,7 +1943,7 @@
                                                         2025</li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="venue.html"
                                                                 target="_blank">Hotel room block cut-off</a> date:
-                                                        </strong>October 18, 2025</li>
+                                                        </strong><del>October 18</del> <span style="color: red;">October 24, 2025</span></li>
                                                 </ul>
                                                 <p
                                                     style="font-size: 14px; color: #666; margin-top: 16px; padding-left: 0;">
@@ -1991,7 +1991,7 @@
                                                         </li>
 
                                                         <li>
-                                                            Discounted hotel reservation deadline: October 18, 2025.
+                                                            Discounted hotel reservation deadline: October 24, 2025.
                                                             <a href=" https://book.passkey.com/go/IEEE25"
                                                                 target="_blank">Make your hotel reservation now</a>.
                                                         </li>                                                        
