--- a/venue.html
+++ b/venue.html
@@ -1815,6 +1815,9 @@
 Washington, DC 20036, US<br><strong>Make a reservation at: </strong><a href="https://book.passkey.com/go/IEEE25"
                                                         target="_blank">https://book.passkey.com/go/IEEE25</a>
 <br />
+
+<p>Conference hotel floorplan and capacities can be found <a href="./files/Capital Hilton Floorplan and Capacities.pdf">here</a>.</p>
+
 <p style="color: red; font-weight: bold;">
   Discounted hotel reservation deadline: October 24, 2025
 </p>
