--- a/venue.html
+++ b/venue.html
@@ -1816,7 +1816,7 @@ Washington, DC 20036, US<br><strong>Make a reservation at: </strong><a href="
                                                         target="_blank">https://book.passkey.com/go/IEEE25</a>
 <br />
 
-<p>Conference hotel floorplan and capacities can be found <a href="./files/Capital Hilton Floorplan and Capacities.pdf">here</a>.</p>
+<p><strong>Conference hotel floorplan and capacities can be found <a href="./files/Capital Hilton Floorplan and Capacities.pdf">here</a>.</strong></p>
 
 <p style="color: red; font-weight: bold;">
   Discounted hotel reservation deadline: October 24, 2025
