--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -1902,7 +1902,7 @@
                                                                     Improving Generalization Capabilities of Models
                                                                     Trained on Time Series Data Using Novel Downsampling
                                                                     Methods</td>
-                                                                <td style="border: 1px solid #ddd; padding: 10px;">Ofir Landau (Ben-Gurion University) and Nir Nissim (Nir Nissim)</td>
+                                                                <td style="border: 1px solid #ddd; padding: 10px;">Ofir Landau (Ben-Gurion University) and Nir Nissim (Ben-Gurion University)</td>
                                                                 <td
                                                                     style="border: 1px solid #ddd; padding: 10px; text-align: center;">
                                                                     Yes</td>
