--- a/cfp.html
+++ b/cfp.html
@@ -1619,6 +1619,14 @@
 								class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Program</a>
 								<ul class="sub-menu" style="min-width: 400px;">
+									
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Program
+                                        </a>
+                                    </li>
+
 									<li
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="workshops.html"
