--- a/index.html
+++ b/index.html
@@ -1612,6 +1612,14 @@
                                 class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Program</a>
                                 <ul class="sub-menu" style="min-width: 400px;">
+                                    
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Program
+                                        </a>
+                                    </li>
+
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="workshops.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
@@ -1973,6 +1981,7 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank">Program</a> has been posted. </li>
                                                         <li><a href="cffss.html" target="_blank">Call for ICDM Female Scholar/Student Award </a>has been posted. The nomination deadline is October 24th.</li>
                                                         <li><a href="authorinstruction_video.html"
                                                                 target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before<span style="color: red;"> 20 October 2025</span>.</li>
