--- a/program.html
+++ b/program.html
@@ -1553,7 +1553,7 @@
 
 
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
+                                class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Calls</a>
                                 <ul class="sub-menu" style="min-width: 450px;">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
@@ -1586,7 +1586,7 @@
                                     </li>
 
                                     <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cfs.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Sponsorship
@@ -1662,11 +1662,11 @@
 
 
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-704 menu-item-has-children menu-item-705">
+                                class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item current_page_item page_item page-item-704 menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Program</a>
                                 <ul class="sub-menu" style="min-width: 400px;">
 
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Program
