--- a/workshops.html
+++ b/workshops.html
@@ -1822,8 +1822,8 @@
 															Workshop of Artificial Intelligence for Time Series
 															Analysis (AI4TS): Theory, Algorithms, and Applications
 														</li>
-														<li><a href="https://aiworks.sites.utk.edu">AIWorks</a>:
-															AI-Driven Workforce and Business Development</li>
+														<!-- <li><a href="https://aiworks.sites.utk.edu">AIWorks</a>:
+															AI-Driven Workforce and Business Development</li> -->
 														<li><a href="https://arrl-icdm.github.io/arrl2025/">ARRL</a>:
 															The 3rd International Workshop on Adaptable, Reliable,
 															and Responsible Learning</li>
@@ -1872,9 +1872,9 @@
 																href="https://www2.kansai-u.ac.jp/dslab/workshop/2025/DMS2025/">DMS2025</a>:
 															Data Mining for Service</li>
 
-														<li><a
+														<!-- <li><a
 																href="https://sites.google.com/view/fiirworkshop">FIIR</a>:
-															Future of Information Integrity Research (FIIR)</li>
+															Future of Information Integrity Research (FIIR)</li> -->
 
 
 														<li><a
@@ -1897,9 +1897,9 @@
 														<li><a href="https://llm4sec-workshop.github.io/">LLM4Sec</a>:
 															LLM4Sec: 1st Workshop on the Use of Large Language
 															Models for Cyber Security</li>
-														<li><a href="https://maps2025.blogs.dsv.su.se">MAPS
+														<!-- <li><a href="https://maps2025.blogs.dsv.su.se">MAPS
 																2025</a>: International Workshop on Machine learning
-															and Analytics for PSychology</li>
+															and Analytics for PSychology</li> -->
 														<li><a
 																href="https://cmhsm.my.canva.site/mhsm-workshop">MHSM 2025</a>: Mental Health Disorder Detection on Social
 															Media (MHSM 2025)</li>
