--- a/tutorials.html
+++ b/tutorials.html
@@ -1654,7 +1654,7 @@
                                      
                                      <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="toturial.html"
+                                        <a href="tutorials.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Tutorials
                                         </a>
