--- a/index.html
+++ b/index.html
@@ -1640,6 +1640,19 @@
                                             Accepted Papers
                                         </a>
                                     </li>
+                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="program.html" target="_blank"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Program
+                                        </a>
+                                    </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 ">
+                                        <a href="tutorials.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Tutorials
+                                        </a>
+                                    </li>
 
                                 </ul>
 
