--- a/program.html
+++ b/program.html
@@ -1686,12 +1686,7 @@
                                 <a href="index.html" aria-current="page">Program</a>
                                 <ul class="sub-menu" style="min-width: 400px;">
 
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Program
-                                        </a>
-                                    </li>
+                              
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="workshops.html"
@@ -1710,6 +1705,19 @@
                                         <a href="acceptedpapers.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Accepted Papers
+                                        </a>
+                                    </li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="program.html" target="_blank"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Program
+                                        </a>
+                                    </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 ">
+                                        <a href="tutorials.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Tutorials
                                         </a>
                                     </li>
 
