--- a/tutorials.html
+++ b/tutorials.html
@@ -1621,12 +1621,7 @@
 								<a href="index.html" aria-current="page">Program</a>
 								<ul class="sub-menu" style="min-width: 400px;">
 									
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Program
-                                        </a>
-                                    </li>
+			
 
 									<li
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
@@ -1651,7 +1646,12 @@
                                     </li>
 
 
-                                     
+                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="program.html" target="_blank"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Program
+                                        </a>
+                                    </li>
                                      <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="tutorials.html"
