--- a/cfs.html
+++ b/cfs.html
@@ -1621,12 +1621,12 @@
 								<a href="index.html" aria-current="page">Program</a>
 								<ul class="sub-menu" style="min-width: 400px;">
 									
-									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+									<!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Program
                                         </a>
-                                    </li>
+                                    </li> -->
 
 									<li
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
