--- a/index.html
+++ b/index.html
@@ -1939,32 +1939,32 @@
                                                     style="line-height: 2.0; font-size: 16px; margin: 0; padding-left: 0; list-style-position: inside;">
                                                     <li style="margin-bottom: 14px;"><strong>Non-author early bird <a
                                                                 href="registration.html"
-                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <span style="color: red;">September 30, 2025</span></li>
+                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <del><span style="color: red;">September 30, 2025</span></del></li>
                                                     <li style="margin-bottom: 14px;"><strong>Author <a
                                                                 href="registration.html"
-                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <span style="color: red;">September 30, 2025</span></li>
+                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <del><span style="color: red;">September 30, 2025</span></del></li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="cfp.html"
                                                                 target="_blank">Main conference</a> camera ready due:
-                                                        </strong>September 25, 2025</li>
+                                                        </strong><del>September 25, 2025</del></li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="cfw.html"
                                                                 target="_blank">Workshops</a> camera ready due:
                                                         </strong><a href="authorinstruction-workshops.html">Check Here</a></li>
                                                     <li style="margin-bottom: 14px;"><strong><a
                                                                 href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html"
                                                                 target="_blank">Tao Li Award</a> submission due:
-                                                        </strong>October 5, 2025</li>
+                                                        </strong><del>October 5, 2025</del></li>
                                                     <li style="margin-bottom: 14px;"><strong><a
                                                                 href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
                                                                 target="_blank">REU symposium</a> camera ready due:
-                                                        </strong>October 15, 2025</li>
+                                                        </strong><del>October 15, 2025</del></li>
                                                     <li style="margin-bottom: 14px;"><strong><a
                                                                 href="https://2025-icdm-ughs.github.io/"
                                                                 target="_blank">Undergraduate and high school
-                                                                symposium</a> camera ready due: </strong>October 15,
-                                                        2025</li>
+                                                                symposium</a> camera ready due: </strong><del>October 15,
+                                                        2025</del></li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="venue.html"
                                                                 target="_blank">Hotel room block cut-off</a> date:
-                                                        </strong><del>October 18</del> <span style="color: red;">October 24, 2025</span></li>
+                                                        </strong><del>October 18</del> <del><span style="color: red;">October 24, 2025</span></del></li>
                                                 </ul>
                                                 <p
                                                     style="font-size: 14px; color: #666; margin-top: 16px; padding-left: 0;">
@@ -1994,7 +1994,8 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
-                                                        <li><a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank">Program</a> has been posted. </li>
+                                                        <li><a href="tutorials.html" target="_blank">Tutorial</a> has been posted. </li>
+                                                        <li><a href="program.html" target="_blank">Program</a> has been posted. </li>
                                                         <li><a href="cffss.html" target="_blank">Call for ICDM Female Scholar/Student Award </a>has been posted. The nomination deadline is October 24th.</li>
                                                         <li><a href="authorinstruction_video.html"
                                                                 target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before<span style="color: red;"> 20 October 2025</span>.</li>
