--- a/keydates.html
+++ b/keydates.html
@@ -1860,7 +1860,7 @@
 
 														<li>Paper submission due date: <del>September 1, 2025</del></li>
 														<li>Decision notification: <del>September 19, 2025</del></li>
-														<li>Camera-ready due date: October 15, 2025</li>
+														<li>Camera-ready due date: <del>October 15, 2025</del></li>
 														<li>Symposium: one day in November 12-15, 2025</li>
 													</ul>
 
@@ -1869,7 +1869,7 @@
 
 														<li>Paper Submission Deadline: <del>September 1, 2025</del></li>
 														<li>Notification of Acceptance: <del>October 1, 2025</del></li>
-														<li>Camera-Ready Paper Submission: October 15, 2025</li>
+														<li>Camera-Ready Paper Submission: <del>October 15, 2025</del></li>
 														<li>Symposium Date: November 15, 2025</li>
 													</ul>
 
@@ -1878,14 +1878,14 @@
 
 														<li>Paper Submission Deadline: <del>August 1, 2025</del></li>
 														<li>Notification of Acceptance: <del>September 30, 2025</del></li>
-														<li>Camera-Ready Paper Submission: October 15, 2025</li>
+														<li>Camera-Ready Paper Submission: <del>October 15, 2025</del></li>
 													</ul>
 
 													<h4><strong>Hotel</strong></h4>
 													<!-- <p>Important Dates:</p> -->
 													
 													<ul>
-														<li> Room Block Cut-Off Date: Saturday, October 24, 2025</li>
+														<li> Room Block Cut-Off Date: <del>Saturday, October 24, 2025</del></li>
 														
 													</ul>
 													<p><a href="https://book.passkey.com/go/IEEE25"
