--- a/program.html
+++ b/program.html
@@ -2398,7 +2398,7 @@
     </tr>
     <tr>
       <td class="time">10:30–12:30</td>
-      <td>Senate</td>
+      <td>South American B</td>
       <td><strong>Main Conference Track S11</strong>: Graphs I</td>
       <td>Lei Zhang</td>
     </tr>
@@ -2414,15 +2414,10 @@
       <td><strong>Main Conference Track S13</strong>: Applications I</td>
       <td>Ping Wang</td>
     </tr>
+    
     <tr>
       <td class="time">10:30–12:30</td>
       <td>South American A</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td class="time">10:30–12:30</td>
-      <td>South American B</td>
       <td>Sentiment Elicitation from Natural Text for Information Retrieval and Extraction (SENTIRE)<br>
         <a href="https://sentic.net/sentire/">https://sentic.net/sentire/</a>
       </td>
@@ -2488,7 +2483,7 @@
     </tr>
     <tr>
       <td class="time">14:00–16:00</td>
-      <td>Senate</td>
+      <td>South American B</td>
       <td><strong>Main Conference Track S14</strong>: Graph Neural Networks</td>
       <td>Lecheng Zheng</td>
     </tr>
@@ -2506,7 +2501,7 @@
     </tr>
     <tr>
       <td class="time">14:00–16:00</td>
-      <td>South American A</td>
+      <td>Senate</td>
       <td>Sentiment Elicitation from Natural Text for Information Retrieval and Extraction (SENTIRE)<br>
         <a href="https://sentic.net/sentire/">https://sentic.net/sentire/</a>
       </td>
@@ -2584,19 +2579,19 @@
     </tr>
     <tr>
       <td class="time">16:30–18:00</td>
-      <td>Senate</td>
+      <td>Federal A</td>
       <td><strong>Main Conference Track S17</strong>: Classification</td>
       <td>Raju Vatsavai</td>
     </tr>
     <tr>
       <td class="time">16:30–18:00</td>
-      <td>Federal A</td>
+      <td>Federal B</td>
       <td><strong>Main Conference Track S18</strong>: Explainability</td>
       <td>Li Zhang</td>
     </tr>
    <tr>
       <td class="time">16:30–18:00</td>
-      <td>South American B</td>
+      <td>Senate</td>
       <td>Women in Science</td>
       <td>Senjuti Basu Roy, Linsey Pang, Ling Chen</td>
     </tr>
@@ -2701,6 +2696,11 @@
       <td class="time">8:30–9:00</td>
       <td colspan="3" style="text-align: center; vertical-align: middle;"><strong>Poster Setup</strong><br>(Session Chairs: Lei Zhang, Zhiqian Chen)</td>
     </tr>
+
+    <tr>
+      <td class="time">8:30–9:00</td>
+      <td colspan="3" style="text-align: center; vertical-align: middle;"><strong>ICDM Award Announcement<br>Dr. Xindong Wu, ICDM Steering Committee Chair</strong><br>Location: Presidential Ballroom (Video Streaming)</td>
+    </tr>
     <tr>
       <td class="time">9:00–10:00</td>
       <td>Presidential Ballroom</td>
@@ -2729,26 +2729,33 @@
       <th><strong>Session/Workshop</strong></th>
       <th><strong>Session Chair(s)</strong></th>
     </tr>
+
     <tr>
-      <td class="time">10:30–12:00</td>
+      <td class="time">10:30–11:00</td>
+      <td>Presidential<br>Ballroom</td>
+      <td>Award Presentations (10-year Impact Award, Tao Li Award)</td>
+      <td>Chang-Tien Lu, Jilles Vreeken</td>
+    </tr>
+    <tr>
+      <td class="time">11:00-12:30</td>
       <td>Presidential<br>Ballroom</td>
       <td>Panel B: AI-Driven Data Mining - Reshaping the Intelligent Future</td>
       <td>Duoduo (Lindi) Liao</td>
     </tr>
     <tr>
-      <td class="time">10:30–12:30</td>
+      <td class="time">11:00–12:30</td>
       <td>Senate</td>
       <td><strong>Main Conference Track S21</strong>: Graphs II</td>
       <td>Yi He</td>
     </tr>
     <tr>
-      <td class="time">10:30–12:30</td>
+      <td class="time">11:00–12:30</td>
       <td>Federal A</td>
       <td><strong>Main Conference Track S22</strong>: LLMs II</td>
       <td>Kunpeng Liu</td>
     </tr>
     <tr>
-      <td class="time">10:30–12:30</td>
+      <td class="time">11:00–12:30</td>
       <td>Federal B</td>
       <td><strong>Main Conference Track S23</strong>: Applications II</td>
       <td>Xuechen Zhang</td>
@@ -3155,12 +3162,7 @@
       <td>UG HS Symposium UH10 (Oral Session: S01221, S01220, S01219, S01218, S01217, S01216)</td>
       <td>Zhou Yang</td>
     </tr>
-    <tr>
-      <td class="time">16:00–17:30</td>
-      <td>Ohio</td>
-      <td>(Not available)</td>
-      <td></td>
-    </tr>
+    
     <tr>
       <td class="time">16:00–17:30</td>
       <td>New York</td>
