--- a/program.html
+++ b/program.html
@@ -2501,7 +2501,7 @@
     </tr>
     <tr>
       <td class="time">14:00–16:00</td>
-      <td>Senate</td>
+      <td>South American A</td>
       <td>Sentiment Elicitation from Natural Text for Information Retrieval and Extraction (SENTIRE)<br>
         <a href="https://sentic.net/sentire/">https://sentic.net/sentire/</a>
       </td>
