--- a/program.html
+++ b/program.html
@@ -2509,7 +2509,7 @@
     </tr>
     <tr>
       <td class="time">14:00–16:00</td>
-      <td>South American B</td>
+      <td>Senate</td>
       <td>Women in Science</td>
       <td>Senjuti Basu Roy, Linsey Pang, Ling Chen</td>
     </tr>
@@ -2686,7 +2686,7 @@
       <td colspan="3" style="text-align: center; vertical-align: middle; border-top: 1px solid black;"><strong>Registration (2nd Floor Coatcheck)</strong></td>
     </tr>
     <tr>
-      <td class="time">8:00-9:30</td>
+      <td class="time">7:30-9:30</td>
       
       <td colspan="3" style="text-align: center; vertical-align: middle;"><strong>Breakfast
 (Capital Terrace)</strong><br></td>
@@ -2701,25 +2701,27 @@
       <td class="time">8:30–9:00</td>
       <td colspan="3" style="text-align: center; vertical-align: middle;"><strong>ICDM Award Announcement<br>Dr. Xindong Wu, ICDM Steering Committee Chair</strong><br>Location: Presidential Ballroom (Video Streaming)</td>
     </tr>
-    <tr>
+   
+     <tr>
       <td class="time">9:00–10:00</td>
-      <td>Presidential Ballroom</td>
-      <td>Keynote Speech II<br>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">Keynote Speech II<br>
         <strong>Dr. Aidong Zhang, University of Virginia, USA<br>
         Optimizing External and Internal Knowledge of Large Foundation Models for Scientific Discovery<br></strong>
         
         Location: Presidential Ballroom
-      </td>
-      <td></td>
+    </tr>
+     <tr>
+      <td class="time">10:00–10:30</td>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">Award Presentations<br><strong>10-year Impact Award, Tao Li Award</strong><br> (Session Chairs: Chang-Tien Lu, Jilles Vreeken)</td>
     </tr>
     <tr>
-      <td class="time">10:00–10:30</td>
+      <td class="time">10:00–11:00</td>
       <td>Capital Terrace,<br>Congressional</td>
       <td style="text-align: center; vertical-align: middle;"><strong>Coffee Break</strong></td>
       <td></td>
     </tr>
     <tr>
-      <td class="time">10:00–10:30</td>
+      <td class="time">10:00–11:00</td>
       <td>Congressional</td>
       <td colspan="2" style="text-align: center; vertical-align: middle;"><strong>Poster Display</strong><br>(Session Chairs: Lei Zhang, Zhiqian Chen)</td>
     </tr>
@@ -2731,13 +2733,7 @@
     </tr>
 
     <tr>
-      <td class="time">10:30–11:00</td>
-      <td>Presidential<br>Ballroom</td>
-      <td>Award Presentations (10-year Impact Award, Tao Li Award)</td>
-      <td>Chang-Tien Lu, Jilles Vreeken</td>
-    </tr>
-    <tr>
-      <td class="time">11:00-12:30</td>
+      <td class="time">11:00–12:30</td>
       <td>Presidential<br>Ballroom</td>
       <td>Panel B: AI-Driven Data Mining - Reshaping the Intelligent Future</td>
       <td>Duoduo (Lindi) Liao</td>
@@ -3442,6 +3438,11 @@
   <td>Kuan-Ting Chen (Mohamed bin Zayed University of Artificial Intelligence), Chih-Jen Lin (National Taiwan University)</td>
 </tr>
 <tr>
+  <td>DM438</td>
+  <td>Bounds on Kappa-Error Diagrams for Diversity Analysis</td>
+  <td>Krzysztof Grąbczewski (Institute of Engineering and Technology, Faculty of Physics, Astronomy and Informatics, Nicolaus Copernicus University in Torun)</td>
+</tr>
+<tr>
   <td colspan="3"><strong>S18: Explainability</strong></td>
 </tr>
 <tr>
@@ -3768,11 +3769,7 @@
   <td>Differentiable Distance Between Hierarchically-Structured Data</td>
   <td>Matěj Zorek (Czech Technical University in Prague), Tomáš Pevný (Czech Technical University in Prague), Václav Šmídl (Czech Technical University in Prague)</td>
 </tr>
-<tr>
-  <td>DM438</td>
-  <td>Bounds on Kappa-Error Diagrams for Diversity Analysis</td>
-  <td>Krzysztof Grąbczewski (Institute of Engineering and Technology, Faculty of Physics, Astronomy and Informatics, Nicolaus Copernicus University in Torun)</td>
-</tr>
+
 <tr>
   <td colspan="3"><strong>S36: Trustworthiness</strong></td>
 </tr>
