--- a/program.html
+++ b/program.html
@@ -2712,7 +2712,7 @@
     </tr>
      <tr>
       <td class="time">10:00–10:30</td>
-      <td colspan="3" style="text-align: center; vertical-align: middle;">Award Presentations<br><strong>10-year Impact Award, Tao Li Award</strong><br> (Session Chairs: Chang-Tien Lu, Jilles Vreeken)</td>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">Award Research Presentations<br><strong>Research Contributions Award, Dr. Zhi-Hua Zhou (Video Streaming) </strong><br><strong>10-year Impact Award,Dr. Ruining He</strong> <br> <strong>Tao Li Award, Dr. Jundong Li</strong><br> (Session Chairs: Chang-Tien Lu, Jilles Vreeken)<br> Location: Presidential Ballroom</td>
     </tr>
     <tr>
       <td class="time">10:00–11:00</td>
@@ -4885,7 +4885,7 @@ CycleGAN and Custom CNN</td>
       <li>Tofu Skin Salad with Sesame Oil 香油拌鲜腐竹</li>
       <li>Braised Octopus 卤水鲜章鱼</li>
       <li>Seaweed Jellyfish with Surf Clam 海藻蜇皮北极贝</li>
-      <li>Hand-Ripped Amish Chicken 手撕Amish土鸡</li>
+      <li>Shredded Tofu with Chinese Celery & Bamboo Shoots 中芹笋尖干丝</li>
       <li>Osmanthus Stuffed Lotus Roots 桂花糯米糖藕</li>
     </ul>
   </div>
