--- a/program.html
+++ b/program.html
@@ -3223,7 +3223,7 @@
   </ul>
 
   <p><strong>Lunch break: 12:30 – 13:30</strong><br>
-  Day 1: On Your Own; Day 2-4: Provided (Location: Presidential Ballroom)</p>
+  Days 1-4: Provided (Location: Presidential Ballroom)</p>
 
   <p><strong>Banquet: 18:30–22:00, Day 3, Nov 15</strong><br>
   Location: International Spy Museum. Door Open: 18:00</p>
