--- a/program.html
+++ b/program.html
@@ -3054,12 +3054,7 @@
       <td>UG HS Symposium (Poster Session)</td>
       <td>Xuan Wang, Yanjie Fu, Lei Zhang, Zhiqian Chen</td>
     </tr>
-    <tr>
-      <td class="time">14:00–15:30</td>
-      <td>Senate</td>
-      <td>UG HS Symposium (Backup)</td>
-      <td>Xuan Wang, Yanjie Fu</td>
-    </tr>
+ 
     <tr>
       <td class="time">14:00–15:30</td>
       <td>Federal A</td>
@@ -3074,7 +3069,7 @@
     </tr>
     <tr>
       <td class="time">14:00–15:30</td>
-      <td>South American A + B</td>
+      <td>Senate</td>
       <td>UG HS Symposium UH3 (Oral Session: S01273, S01271, S01269, S01267, S01264, S01263)</td>
       <td>Fang Jin</td>
     </tr>
@@ -3128,12 +3123,7 @@
       <td colspan="2" style="text-align: center; vertical-align: middle;"><strong>Poster Display</strong></td>
       
     </tr>
-    <tr>
-      <td class="time">16:00–17:30</td>
-      <td>Senate</td>
-      <td>UG HS Symposium (Backup)</td>
-      <td>Xuan Wang, Yanjie Fu</td>
-    </tr>
+   
     <tr>
       <td class="time">16:00–17:30</td>
       <td>Federal A</td>
@@ -3148,7 +3138,7 @@
     </tr>
     <tr>
       <td class="time">16:00–17:30</td>
-      <td>South American A + B</td>
+      <td>Senate</td>
       <td>UG HS Symposium UH9 (Oral Session: DM314, S01228, S01227, S01226, S01224, S01223, S01222)</td>
       <td>Kanthi K Sarpatwar</td>
     </tr>
@@ -3203,8 +3193,10 @@
     </tr>
   </tbody>
 </table>
-
 <br>
+<h3>IEEE ICDM 2025 Recorded Virtual Presentations</h3>
+ <a href="https://www.cs.stonybrook.edu/~icdm2025/videopresentations.html" target="_blank">https://www.cs.stonybrook.edu/~icdm2025/videopresentations.html</a>
+<br><br>
 <h3>Conference Hotel Floor Map (Second Floor)</h3>
   <br>
 <a href="./images/program/second_floor.png" target="_blank">
@@ -3212,9 +3204,9 @@
        src="./images/program/second_floor.png"
        alt="second floor" /></a>
        <br><br>
-  <h3>Coffee, Lunch and Banquet</h3>
-  
-  <h4>Coffee Break: Congressional and Capital Terrace</h4>
+  <h3>Breakfast, Lunch, Coffee and Banquet (Provided)</h3>
+  <strong>Breakfast: </strong>Location: Capital Terrace <br>Nov 12 (Wed)–14 (Fri): 7:30–9:30am; Nov 15 (Sat): 8:00–9:30am<br><br>
+  <strong>Coffee Break:</strong> Location: Congressional and Capital Terrace
   <ul>
     <li>Wed, Nov 12 — 10:00–10:30 • 16:00–16:30</li>
     <li>Thu, Nov 13 — 10:00–10:30 • 16:00–16:30</li>
@@ -3223,7 +3215,7 @@
   </ul>
 
   <p><strong>Lunch break: 12:30 – 13:30</strong><br>
-  Days 1-4: Provided (Location: Presidential Ballroom)</p>
+  Days 1-4: Location: Presidential Ballroom</p>
 
   <p><strong>Banquet: 18:30–22:00, Day 3, Nov 15</strong><br>
   Location: International Spy Museum. Door Open: 18:00</p>
