--- a/program.html
+++ b/program.html
@@ -3299,7 +3299,7 @@
     <tr>
       <td>DM238</td>
       <td>Detect, Investigate, Judge and Determine: A Knowledge-guided Framework for Few-shot Fake News Detection</td>
-      <td>Ye Liu (University of Science and Technology of China), Jiajun Zhu (University of Science and Technology of China), Xukai Liu (University of Science and Technology of China), Haoyu Tang (University of Science and Technology of China), Yanhai Zhang (University of Science and Technology of China), Kai Zhang (University of Science and Technology of China), Xiaofang Zhang (The Hong Kong University of Science and Technology), Enhong Chen (University of Science and Technology of China)</td>
+      <td>Ye Liu (University of Science and Technology of China), Jiajun Zhu (University of Science and Technology of China), Xukai Liu (University of Science and Technology of China), Haoyu Tang (University of Science and Technology of China), Yanhai Zhang (University of Science and Technology of China), Kai Zhang (University of Science and Technology of China), Xiaofang Zhou (The Hong Kong University of Science and Technology), Enhong Chen (University of Science and Technology of China)</td>
     </tr>
     <tr>
       <td>DM245</td>
