--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -2349,7 +2349,7 @@
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">53</td>
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">DM561</td>
   <td style="border: 1px solid #ddd; padding: 10px;">Retrieval-Augmented Feature Generation for Domain-Specific Classification</td>
-  <td style="border: 1px solid #ddd; padding: 10px;">Xinhao Zhang (Portland State University), Jinghan Zhang (Portland State University), Fengran Mo (University of Montreal), Dakshak Keerthi Chandra (Analog Devices), Yuzhong Chen (Visa Research), Fei Xie (Portland State University) and Kunpeng Liu (Portland State University)</td>
+  <td style="border: 1px solid #ddd; padding: 10px;">Xinhao Zhang (Portland State University), Jinghan Zhang (Clemson University), Fengran Mo (University of Montreal), Dakshak Keerthi Chandra (Analog Devices), Yuzhong Chen (Independent Researcher), Fei Xie (Portland State University) and Kunpeng Liu (Clemson University)</td>
   <td style="border: 1px solid #ddd; padding: 10px; text-align: center;">Yes</td>
 </tr>
 <!--编号54: Paper ID DM562-->
