--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3745,10 +3745,10 @@
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
                                                                 href="https://songdj.github.io/"
-                                                                target="_blank">Dongjing Song</h4>
+                                                                target="_blank">Dongjin Song</h4>
 
                                                         <div>
-                                                            <p>U. of Connecticut</p>
+                                                            <p>University of Connecticut</p>
                                                         </div></a>
 
                                                     </div>
