--- a/index.html
+++ b/index.html
@@ -1693,7 +1693,7 @@
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="venue.html">
-                                            Venue
+                                            Conference Hotel & Banquet Venue
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
