--- a/authorinstruction_paper.html
+++ b/authorinstruction_paper.html
@@ -1695,7 +1695,7 @@
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="venue.html"
                                             >
-                                            Venue
+                                            Conference Hotel & Banquet Venue
                                         </a>
                                     </li>
 
