--- a/keydates.html
+++ b/keydates.html
@@ -1696,7 +1696,7 @@
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="venue.html"
                                             >
-                                            Venue
+                                            Conference Hotel & Banquet Venue
                                         </a>
                                     </li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
