--- a/pcmemberlist.html
+++ b/pcmemberlist.html
@@ -1707,7 +1707,7 @@ th:nth-child(1), td:nth-child(1) {
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="venue.html">
-                                            Venue
+                                            Conference Hotel & Banquet Venue
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
