--- a/program.html
+++ b/program.html
@@ -2758,12 +2758,6 @@
     </tr>
     <tr>
       <td class="time">10:30–12:30</td>
-      <td>South American A</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td class="time">10:30–12:30</td>
       <td>South American B</td>
       <td>BlueSky Track</td>
       <td>Yujun Yan, Farnoush Banaei-Kashani, Xiaowei Jia</td>
@@ -2777,9 +2771,9 @@
     <tr>
       <td class="time">10:30–12:30</td>
       <td>Ohio</td>
-      <td>Tutorial 8: AI for Precision Medicine: Integrative Analysis of Histopathology Images and Spatial Omics</td>
-      <td>Ninghui Hao, Boshen Yan, Dong Li, Chen Zhao, Guihong Wan</td>
-    </tr>
+  <td>Tutorial 10: Responsible GenFMs: From Foundational Principles to Real-World Impact</td>
+  <td>Yue Huang, Canyu Chen, Lu Cheng, Bhavya Kailkhura, Manling Li, Xiangliang Zhang</td>
+</tr>
     <tr>
       <td class="time">10:30–12:30</td>
       <td>New York</td>
@@ -2819,10 +2813,10 @@
 </tr>
 <tr>
   <td class="time">13:30–15:20</td>
-  <td>Ohio</td>
-  <td>Tutorial 10: Responsible GenFMs: From Foundational Principles to Real-World Impact</td>
-  <td>Yue Huang, Canyu Chen, Lu Cheng, Bhavya Kailkhura, Manling Li, Xiangliang Zhang</td>
-</tr>
+ <td>Ohio</td>
+      <td>Tutorial 8: AI for Precision Medicine: Integrative Analysis of Histopathology Images and Spatial Omics</td>
+      <td>Ninghui Hao, Boshen Yan, Dong Li, Chen Zhao, Guihong Wan</td>
+    </tr>
 <tr>
   <td class="time">14:00–15:30</td>
   <td>Senate</td>
@@ -3412,7 +3406,7 @@
 <tr>
   <td>DM561</td>
   <td>Retrieval-Augmented Feature Generation for Domain-Specific Classification</td>
-  <td>Xinhao Zhang (Portland State University), Jinghan Zhang (Portland State University), Fengran Mo (University of Montreal), Dakshak Keerthi Chandra (Analog Devices), Yuzhong Chen (Visa Research), Fei Xie (Portland State University), Kunpeng Liu (Portland State University)</td>
+  <td>Xinhao Zhang (Portland State University), Jinghan Zhang (Clemson University), Fengran Mo (University of Montreal), Dakshak Keerthi Chandra (Analog Devices), Yuzhong Chen (Independent Researcher), Fei Xie (Portland State University), Kunpeng Liu (Clemson University)</td>
 </tr>
 <tr>
   <td>DM684</td>
@@ -4126,8 +4120,8 @@ Time Workshop Title Host(s)</h3>
     </tr>
     <tr>
       <td>10:30 am – 12:30 pm</td>
-      <td>AI for Precision Medicine: Integrative Analysis of Histopathology Images and Spatial Omics</td>
-      <td>Ninghui Hao (Harvard Medical School), Boshen Yan (Carnegie Mellon University), Dong Li (Baylor University), Chen Zhao (Baylor University), Guihong Wan (Harvard Medical School)</td>
+ <td>Responsible GenFMs: From Foundational Principles to Real-World Impact</td>
+      <td>Yue Huang (University of Notre Dame), Canyu Chen (Northwestern University), Lu Cheng (University of Illinois Chicago), Bhavya Kailkhura (Lawrence Livermore National Laboratory), Manling Li (Northwestern University), Xiangliang Zhang (University of Notre Dame)</td>
     </tr>
     <tr>
       <td>1:30 pm – 3:20 pm</td>
@@ -4136,8 +4130,8 @@ Time Workshop Title Host(s)</h3>
     </tr>
     <tr>
       <td>1:30 pm – 3:20 pm</td>
-      <td>Responsible GenFMs: From Foundational Principles to Real-World Impact</td>
-      <td>Yue Huang (University of Notre Dame), Canyu Chen (Northwestern University), Lu Cheng (University of Illinois Chicago), Bhavya Kailkhura (Lawrence Livermore National Laboratory), Manling Li (Northwestern University), Xiangliang Zhang (University of Notre Dame)</td>
+    <td>AI for Precision Medicine: Integrative Analysis of Histopathology Images and Spatial Omics</td>
+      <td>Ninghui Hao (Harvard Medical School), Boshen Yan (Carnegie Mellon University), Dong Li (Baylor University), Chen Zhao (Baylor University), Guihong Wan (Harvard Medical School)</td>
     </tr>
     <tr>
       <td>3:40 pm – 5:30 pm</td>
