--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -1616,45 +1616,45 @@
                                 <a href="index.html" aria-current="page">Program</a>
                                 <ul class="sub-menu" style="min-width: 400px;">
 
-                                    <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="./files/IEEE-ICDM2025-Program-Schedule.pdf" target="_blank"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Program
-                                        </a>
-                                    </li> -->
-
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="workshops.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Workshops
-                                        </a>
-                                    </li>
-
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="keynotes.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Keynotes
-                                        </a>
-                                    </li>
-
-                                    <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="acceptedpapers.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Accepted Papers
-                                        </a>
-                                    </li>
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="program.html" target="_blank"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Program
                                         </a>
                                     </li>
-                                     <li
+									                  <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 ">
+                                        <a href="panels.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Panels
+                                        </a>
+                                    </li>
+										                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="keynotes.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Keynotes
+                                        </a>
+                                    </li>
+									<li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 ">
+										<a href="workshops.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Workshops
+										</a>
+									</li>
+
+								                      <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="tutorials.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Tutorials
+                                        </a>
+                                    </li>
+									                  <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="acceptedpapers.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Accepted Papers
                                         </a>
                                     </li>
 
