--- a/program.html
+++ b/program.html
@@ -1688,36 +1688,45 @@
 
                               
 
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="workshops.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Workshops
-                                        </a>
-                                    </li>
-
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="keynotes.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Keynotes
-                                        </a>
-                                    </li>
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="acceptedpapers.html"
-                                            style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Accepted Papers
-                                        </a>
-                                    </li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="program.html" target="_blank"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Program
                                         </a>
                                     </li>
-                                     <li
+									 <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 ">
+                                        <a href="panels.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Panels
+                                        </a>
+                                    </li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="keynotes.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Keynotes
+                                        </a>
+                                    </li>
+									<li
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="workshops.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Workshops
+										</a>
+									</li>
+
+								 <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="tutorials.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Tutorials
+                                        </a>
+                                    </li>
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="acceptedpapers.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Accepted Papers
                                         </a>
                                     </li>
 
